Hermes CLI generates and validates project (#44)